change names of current filter parameters
